--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
     <!--RELATORIOS-->
 
     <div class="container-fluid relatorio">
-        <div class="container intro ">
+        <div class="container intro d-flex ">
 
             <div class="col-4">
                 <h1>RELATÓRIOS</h1>
             </div>
 
-            <div class="col-2">
+            <div class="col-2 justify-content-center rel">
                 <a href="/requisitos/wireframe-teste-editor-web.pdf" download>
                     <img src="/includes/imgs/relatorio.png" alt="relatorio" class="img-relatorio">
                 </a>
@@ -215,18 +215,30 @@
                     pu.
                 </p>
 
-                <button type="button" class="btn btn-secondary btn-lg btn-tj">VER MAIS</button>
+                <button type="button" class="btn btn-secondary btn-lg btn-tj ">VER MAIS</button>
             </div>
 
-            <div class="col-md-8">
-                <div class="row photos">
-                    <div class="col-sm-4 col-md-4 item maior"><a href="/includes/imgs/bebe.png"
-                            data-lightbox="photos"><img class="img-tj img-fluid " src="/includes/imgs/bebe.png"></a>
+            <div class="col-md-8 galeria d-flex">
+                <div class="row">
+
+                    <div class="col-sm-4 col-md-4 item maior ">
+                        <a href="/includes/imgs/bebe.png" data-lightbox="photos">
+                            <img class="img-tj img-fluid" src="/includes/imgs/bebe.png">
+                        </a>
                     </div>
-                    <div class="col-sm-4 col-md-4 item"><a href="/includes/imgs/bebe3.jpg" data-lightbox="photos"><img
-                                class="img-fluid img-tj" src="/includes/imgs/bebe3.jpg"></a></div>
-                    <div class="col-sm-4 col-md-4 item"><a href="/includes/imgs/bebe4.jpg" data-lightbox="photos"><img
-                                class="img-fluid img-tj" src="/includes/imgs/bebe4.jpg"></a></div>
+
+                    <div class="col-sm-4 col-md-4 item ">
+                        <a href="/includes/imgs/bebe3.jpg" data-lightbox="photos">
+                            <img class="img-fluid img-tj" src="/includes/imgs/bebe3.jpg">
+                        </a>
+                    </div>
+
+                    <div class="col-sm-4 col-md-4 item">
+                        <a href="/includes/imgs/bebe4.jpg" data-lightbox="photos">
+                            <img class="img-fluid img-tj" src="/includes/imgs/bebe4.jpg">
+                        </a>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -236,7 +248,7 @@
 
     <!--FOOTER-->
 
-    <div class="container-fluid footer" id="footer">
+    <div class="container-fluid footer " id="footer">
 
 
         <div class="col-md-6 col-sm-2">
