--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
                                       com certeza darei meu melhor para poder acrescentar e ter uma boa jornada com vocês.">
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="/includes/css/main.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="includes/css/style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="includes/css/global.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="includes/css/mobile.css" media="screen" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
 
     <!-- FAVICON -->
 
-    <link rel="shortcut icon" href="/includes/imgs/favicon.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="includes/imgs/favicon.svg" type="image/x-icon" />
 
 
 
@@ -44,11 +48,11 @@
 
                 <img class="icone2" src="includes/imgs/facebook.png">
 
-                <img class="icone2" src="/includes/imgs/twitter.png">
+                <img class="icone2" src="includes/imgs/twitter.png">
 
-                <img class="icone2" src="/includes/imgs/instagram.png">
+                <img class="icone2" src="includes/imgs/instagram.png">
 
-                <img class="icone2" src="/includes/imgs/plus.png">
+                <img class="icone2" src="includes/imgs/plus.png">
 
 
 
@@ -64,7 +68,7 @@
 
         <div class="container">
             <a class="navbar-brand h1 mb-0" href="index.html">
-                <img src="/includes/imgs/logo_tjmg.svg" alt="TJMG" class="logo-tjmg img-fluid ">
+                <img src="includes/imgs/logo_tjmg.svg" alt="TJMG" class="logo-tjmg img-fluid ">
             </a>
 
             <!--BOTÃO MOBILE MENU-->
@@ -111,13 +115,13 @@
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/includes/imgs/slider02.jpg" class="d-block w-100" alt="slider01">
+                <img src="includes/imgs/slider02.jpg" class="d-block w-100" alt="slider01">
             </div>
             <div class="carousel-item">
-                <img src="/includes/imgs/slider01.jpg" class="d-block w-100" alt="slider02">
+                <img src="includes/imgs/slider01.jpg" class="d-block w-100" alt="slider02">
             </div>
             <div class="carousel-item">
-                <img src="/includes/imgs/slider03.jpg" class="d-block w-100" alt="slider03">
+                <img src="includes/imgs/slider03.jpg" class="d-block w-100" alt="slider03">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouseltj" data-bs-slide="prev">
@@ -152,7 +156,7 @@
             </div>
 
             <div class="col-md-6">
-                <img src="/includes/imgs/mulher.jpg" alt="mulher" class="img-fluid imagem-introducao img-tj">
+                <img src="includes/imgs/mulher.jpg" alt="mulher" class="img-fluid imagem-introducao img-tj">
 
             </div>
 
@@ -172,27 +176,27 @@
             </div>
 
             <div class="col-2 justify-content-center rel">
-                <a href="/requisitos/wireframe-teste-editor-web.pdf" download>
-                    <img src="/includes/imgs/relatorio.png" alt="relatorio" class="img-relatorio">
+                <a href="requisitos/wireframe-teste-editor-web.pdf" download>
+                    <img src="includes/imgs/relatorio.png" alt="relatorio" class="img-relatorio">
                 </a>
             </div>
 
             <div class="col-2 d-none d-sm-block">
-                <a href="/requisitos/wireframe-teste-editor-web.pdf" download>
-                    <img src="/includes/imgs/relatorio.png" alt="relatorio" class="img-relatorio">
+                <a href="requisitos/wireframe-teste-editor-web.pdf" download>
+                    <img src="includes/imgs/relatorio.png" alt="relatorio" class="img-relatorio">
                 </a>
             </div>
 
 
             <div class="col-2 d-none d-sm-block">
-                <a href="/requisitos/wireframe-teste-editor-web.pdf" download>
-                    <img src="/includes/imgs/relatorio.png" alt="relatorio" class="img-relatorio">
+                <a href="requisitos/wireframe-teste-editor-web.pdf" download>
+                    <img src="includes/imgs/relatorio.png" alt="relatorio" class="img-relatorio">
                 </a>
             </div>
 
             <div class="col-2 d-none d-sm-block">
-                <a href="/requisitos/wireframe-teste-editor-web.pdf" download>
-                    <img src="/includes/imgs/relatorio.png" alt="relatorio" class="img-relatorio">
+                <a href="requisitos/wireframe-teste-editor-web.pdf" download>
+                    <img src="includes/imgs/relatorio.png" alt="relatorio" class="img-relatorio">
                 </a>
             </div>
 
@@ -222,20 +226,20 @@
                 <div class="row">
 
                     <div class="col-sm-4 col-md-4 item maior ">
-                        <a href="/includes/imgs/bebe.png" data-lightbox="photos">
-                            <img class="img-tj img-fluid" src="/includes/imgs/bebe.png">
+                        <a href="includes/imgs/bebe.png" data-lightbox="photos">
+                            <img class="img-tj img-fluid" src="includes/imgs/bebe.png">
                         </a>
                     </div>
 
                     <div class="col-sm-4 col-md-4 item ">
-                        <a href="/includes/imgs/bebe3.jpg" data-lightbox="photos">
-                            <img class="img-fluid img-tj" src="/includes/imgs/bebe3.jpg">
+                        <a href="includes/imgs/bebe3.jpg" data-lightbox="photos">
+                            <img class="img-fluid img-tj" src="includes/imgs/bebe3.jpg">
                         </a>
                     </div>
 
                     <div class="col-sm-4 col-md-4 item">
-                        <a href="/includes/imgs/bebe4.jpg" data-lightbox="photos">
-                            <img class="img-fluid img-tj" src="/includes/imgs/bebe4.jpg">
+                        <a href="includes/imgs/bebe4.jpg" data-lightbox="photos">
+                            <img class="img-fluid img-tj" src="includes/imgs/bebe4.jpg">
                         </a>
                     </div>
 
@@ -308,13 +312,13 @@
                                 <img class="icone" src="includes/imgs/facebook.png">
                             </div>
                             <div class="rede" id="twitter">
-                                <img class="icone" src="/includes/imgs/twitter.png">
+                                <img class="icone" src="includes/imgs/twitter.png">
                             </div>
                             <div class="rede" id="insta">
-                                <img class="icone" src="/includes/imgs/instagram.png">
+                                <img class="icone" src="includes/imgs/instagram.png">
                             </div>
                             <div class="rede" id="google">
-                                <img class="icone" src="/includes/imgs/plus.png">
+                                <img class="icone" src="includes/imgs/plus.png">
                             </div>
                         </div>
                     </div>
