--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
             <div class="row">
                 <div class="col-md-7 col-sm-2">
                     <h1 class="endereco">ENDEREÇO</h1>
-                    <p class="text-endeco">Av. Afonso Pena, 4001 - Serra - 30.130-911 - Belo Horizonte - MG - Brasil - TEL.: (31) 3306-3100 
-
-                        .
+                    <p class="text-endeco">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                        printer took a galley of type pu.
 
                     </p>
                 </div>
