--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <div class="row">
                 <div class="col-md-7 col-sm-2">
                     <h1 class="endereco">ENDEREÇO</h1>
-                    <p class="text-endeco">Av. Afonso Pena, 4001 - Serra - 30.130-911 - Belo Horizonte - MG - Brasil <br>TEL.: (31) 3306-3100 ..
+                    <p class="text-endeco">Av. Afonso Pena, 4001 - Serra - 30.130-911 - Belo Horizonte - MG - Brasil <br><spam class="tel">TEL.: (31) 3306-3100</spam>
 
                     </p>
                 </div>
