--- a/index.html
+++ b/index.html
@@ -222,22 +222,22 @@
                 <button type="button" class="btn btn-secondary btn-lg btn-tj ">VER MAIS</button>
             </div>
 
-            <div class="col-sm-12 col-md-8 galeria d-flex">
+            <div class="col-md-8 galeria d-flex">
                 <div class="row">
 
-                    <div class="col-sm-8 col-md-4 item maior ">
+                    <div class="col-sm-12 col-md-4 item maior ">
                         <a href="includes/imgs/bebe.png" data-lightbox="photos">
                             <img class="img-tj img-fluid" src="includes/imgs/bebe.png">
                         </a>
                     </div>
 
-                    <div class="col-sm-2 col-md-4 item ">
+                    <div class="col-sm-6 col-md-4 item menor">
                         <a href="includes/imgs/bebe3.jpg" data-lightbox="photos">
                             <img class="img-fluid img-tj" src="includes/imgs/bebe3.jpg">
                         </a>
                     </div>
 
-                    <div class="col-sm-2 col-md-4 item">
+                    <div class="col-sm-6 col-md-4 item menor">
                         <a href="includes/imgs/bebe4.jpg" data-lightbox="photos">
                             <img class="img-fluid img-tj" src="includes/imgs/bebe4.jpg">
                         </a>
